Update to new Unreal Engine version. New Lectures for new Section 5 87-95.

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9615315D4C42D05C429330AACFF23BA1
+CompanyName=Billeclipse
+CompanyDistinguishedName=Billeclipse
+CopyrightNotice=Copyrights to Billeclipse.
 
 [StartupActions]
 bAddPacks=True
